# skm

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO.md  LICENSE  README.md  SECURITY.md  SPONSORS.md  SUPPORT.md  TRADEMARK.md  skills.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: api.yml  ci.yml  release.yml
.opencode/command/: speckit.create-pr.md  speckit.implement.md  speckit.taskstoissues.md
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
api/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
api/migrations/: 0001_search_index.sql
api/scripts/: write-wrangler-config.mjs
api/src/: core.ts  index.ts  types.ts
api/test/: core.test.ts  worker-flow.test.ts
docs/: .gitignore  README.md  RELEASE_NOTES.md  architecture.md  commands.md  contributing.md  get-started.md  github-project-sync.md  github-repository-audit-checklist.md  installation.md  lockfile.md  manifest.md  mdx-components.tsx  meta.json  next.config.mjs  package-lock.json  package.json  quickstart.md  release-process.md  source.config.ts  testing.md  troubleshooting.md  tsconfig.json
docs/app/: global.css  layout.tsx  provider.tsx
docs/components/: mdx.tsx  search.tsx
docs/lib/: layout.shared.tsx  source.ts
docs/scripts/: preview.mjs
scripts/: check_docs.py  generate_homebrew_formula.py  generate_release_docs.py  speckit_sync_issues.py  test_automation.py
scripts/public/: _headers  install.ps1  install.sh
specs/001-skills-pkg-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-project-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-skill-install-fallback/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-integ-tests-coverage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-github-ci-pipeline/: data-model.md  issue-map.json  plan.md  quickstart.md  research.md  spec.md  (+1 more)
src/: discovery.rs  error.rs  git.rs  install_channel.rs  install_target.rs  lockfile.rs  main.rs  manifest.rs  skill.rs  skills_sh.rs  ui.rs  update_check.rs
tests/: adoption_cli.rs  export.rs  install_default.rs  install_fallback.rs  publish.rs  search_api_e2e.rs
(+35 files in other folders)
