[package]
name = "skm-rs"
version = "0.1.0"
edition = "2021"
description = "Agentic skills package manager"
license = "Apache-2.0"
homepage = "https://github.com/iMagdy/skm"
repository = "https://github.com/iMagdy/skm"
readme = "README.md"
keywords = ["agentic", "skills", "package-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "skm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.15"
miette = { version = "7", features = ["fancy"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
regex = "1"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
