[package]
name = "ktesio"
version = "0.4.0"
edition = "2021"
description = "Agentic skills package manager"
license = "Apache-2.0"
homepage = "https://github.com/iMagdy/ktesio"
repository = "https://github.com/iMagdy/ktesio"
readme = "README.md"
keywords = ["agentic", "skills", "package-manager", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
console = "0.16"
miette = { version = "7", features = ["fancy"] }
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
regex = "1"
dialoguer = "0.12"
ureq = { version = "2", features = ["json"] }
urlencoding = "2"
semver = "1"
flate2 = "1"
sha2 = "0.10"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
